crates/ruff/src/rules/tryceratops/snapshots/ruff__rules__tryceratops__tests__verbose-log-message_TRY401.py.snap
---
source: crates/ruff/src/rules/tryceratops/mod.rs
---
TRY401.py:8:45: TRY401 Redundant exception object included in `logging.exception` call
  |
6 |         finish()
7 |     except Exception as ex:
8 |         logger.exception(f"Found an error: {ex}")  # TRY401
  |                                             ^^ TRY401
  |

TRY401.py:19:53: TRY401 Redundant exception object included in `logging.exception` call
   |
17 |         if True is False:
18 |             for i in range(10):
19 |                 logger.exception(f"Found an error: {bad} {good}")  # TRY401
   |                                                     ^^^ TRY401
20 |     except IndexError as bad:
21 |         logger.exception(f"Found an error: {bad} {bad}")  # TRY401
   |

TRY401.py:21:45: TRY401 Redundant exception object included in `logging.exception` call
   |
19 |                 logger.exception(f"Found an error: {bad} {good}")  # TRY401
20 |     except IndexError as bad:
21 |         logger.exception(f"Found an error: {bad} {bad}")  # TRY401
   |                                             ^^^ TRY401
22 |     except Exception as bad:
23 |         logger.exception(f"Found an error: {bad}")  # TRY401
   |

TRY401.py:21:51: TRY401 Redundant exception object included in `logging.exception` call
   |
19 |                 logger.exception(f"Found an error: {bad} {good}")  # TRY401
20 |     except IndexError as bad:
21 |         logger.exception(f"Found an error: {bad} {bad}")  # TRY401
   |                                                   ^^^ TRY401
22 |     except Exception as bad:
23 |         logger.exception(f"Found an error: {bad}")  # TRY401
   |

TRY401.py:23:45: TRY401 Redundant exception object included in `logging.exception` call
   |
21 |         logger.exception(f"Found an error: {bad} {bad}")  # TRY401
22 |     except Exception as bad:
23 |         logger.exception(f"Found an error: {bad}")  # TRY401
   |                                             ^^^ TRY401
24 |         logger.exception(f"Found an error: {bad}")  # TRY401
   |

TRY401.py:24:45: TRY401 Redundant exception object included in `logging.exception` call
   |
22 |     except Exception as bad:
23 |         logger.exception(f"Found an error: {bad}")  # TRY401
24 |         logger.exception(f"Found an error: {bad}")  # TRY401
   |                                             ^^^ TRY401
25 | 
26 |         if True:
   |

TRY401.py:27:49: TRY401 Redundant exception object included in `logging.exception` call
   |
26 |         if True:
27 |             logger.exception(f"Found an error: {bad}")  # TRY401
   |                                                 ^^^ TRY401
   |

TRY401.py:39:47: TRY401 Redundant exception object included in `logging.exception` call
   |
37 |         ...
38 |     except Exception as ex:
39 |         logger.exception(f"Logging an error: {ex}")  # TRY401
   |                                               ^^ TRY401
   |

TRY401.py:46:53: TRY401 Redundant exception object included in `logging.exception` call
   |
44 |         ...
45 |     except Exception as ex:
46 |         logger.exception("Logging an error: " + str(ex))  # TRY401
   |                                                     ^^ TRY401
   |

TRY401.py:53:47: TRY401 Redundant exception object included in `logging.exception` call
   |
51 |         ...
52 |     except Exception as ex:
53 |         logger.exception("Logging an error:", ex)  # TRY401
   |                                               ^^ TRY401
   |


